# agentprobe

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.agentprobe/: config.yaml  style-profile.yaml
.github/workflows/: ci.yml
.hypothesis/constants/: 6fd694b54402dd51  9f5042fabaf8eb4e
.hypothesis/examples/04e6b3400353b141/: e10fbd5b1d4d92aa  ee004430f22db4d1
action/: Dockerfile  action.yml
src/agents/: architecture_agent.py  pattern_agent.py  regression_agent.py  verdict_orchestrator.py
src/cache/: hash_utils.py  memory_cache.py
src/config/: loader.py
src/experimental/: __init__.py  code_transformer.py  demo.py  gossip_governance.py  kinetic_agent.py  refactor_proposals.py  resonance_core.py  telemetry.py  torch_backend.py
src/graph/: nodes.py  state.py  workflow.py
src/integrations/: action_runner.py  github_app.py  webhook_server.py
src/parsers/: diff_parser.py  import_graph.py  tree_sitter_engine.py
src/profiles/: boundary_loader.py  style_generator.py
tests/: conftest.py  test_architecture_agent.py  test_e2e.py  test_integrations.py  test_parsers.py  test_pattern_agent.py  test_regression_agent.py  test_verdict_orchestrator.py  test_workflow_integration.py
tests/fixtures/boundary_violation_repo/.agentprobe/: boundaries.yaml
tests/test_experimental/: conftest.py  test_code_transformer.py  test_gossip_governance.py  test_kinetic_agent.py  test_manifold_scanner.py  test_packed_resonance.py  test_pid_governor.py  test_refactor_proposals.py  test_resonance_core.py  test_telemetry.py  test_torch_backend.py
(+10 files in other folders)
